--- a/Pages/Movies/Create.cshtml
+++ b/Pages/Movies/Create.cshtml
@@ -53,7 +53,7 @@
                                         }
                                         @:<td>
                                             <input type="checkbox"
-                                                   name="selectedCourses"
+                                                   name="selectedCategories"
                                                    value="@cat.GenreID"
                                                    @(Html.Raw(cat.Assigned ? "checked=\"checked\"" : "")) />
                                             @cat.GenreID @: @cat.Name
