--- a/Pages/Movies/Create.cshtml
+++ b/Pages/Movies/Create.cshtml
@@ -56,7 +56,7 @@
                                                    name="selectedCategories"
                                                    value="@cat.GenreID"
                                                    @(Html.Raw(cat.Assigned ? "checked=\"checked\"" : "")) />
-                                            @cat.GenreID @: @cat.Name
+                                             @cat.Name
                                         @:</td>
                                     }
                                 @:</tr>
