--- a/Pages/Movies/Index.cshtml
+++ b/Pages/Movies/Index.cshtml
@@ -62,7 +62,7 @@
                 @{
                     foreach (var category in item.MovieGenres)
                     {
-                        @category.Genre.ID @: @category.Genre.GenreName <br />
+                         @category.Genre.GenreName <br />
                     }
                 }
             </td>
