--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Ispas_Teodora_Proiect - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - Ispas Teodora
+            
         </div>
     </footer>
 
