--- a/Pages/Movies/Delete.cshtml
+++ b/Pages/Movies/Delete.cshtml
@@ -31,7 +31,7 @@
             @Html.DisplayFor(model => model.Movie.Duration)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Movie.ReleaseDate);
+            @Html.DisplayNameFor(model => model.Movie.ReleaseDate)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.ReleaseDate)
