--- a/Pages/Movies/Index.cshtml
+++ b/Pages/Movies/Index.cshtml
@@ -5,9 +5,11 @@
     ViewData["Title"] = "Index";
 }
 
-<img src="~/images/movie.jpg" height="300" width="100%"/>
+<h3 style="text-align:center;">Must watch movies</h3><br/>
+
+<img src="~/images/actors1.jpg" height="300" width="1200" />
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Create New Movie</a>
 </p>
 <table class="table">
     <thead>
